# yograj-proof-reader

./: .gitignore  Cargo.toml  Procfile
.github/workflows/: release.yml
backend/: .env  .env.example  Cargo.toml
backend/migrations/: 0001_initial.sql  0002_add_source.sql
backend/src/: error.rs  html_utils.rs  lib.rs  main.rs  models.rs  state.rs
backend/src/routes/: export.rs  mod.rs  proofread.rs  session.rs  words.rs
backend/src/services/: autocorrect.rs  mod.rs  punctuator.rs  spellcheck.rs
frontend/: .env  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  kalash.db  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/api/: client.ts  gemini.ts
frontend/src/components/: Editor.tsx  ExportManager.tsx  Settings.tsx  WordsManager.tsx
