[package]
name = "kalash-backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "kalash_backend"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
tower-http = { version = "0.6", features = ["cors", "fs"] }
lol_html = "2"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
tower = "0.5"
anyhow = "1"
reqwest = { version = "0.13.2", features = ["json", "query"] }
